# essentia_android_maker

./: README.md
essentia/: README.md  wscript
essentia_android_app/: .gitignore  ANDROID_MEMORY_PROFILING.md  FUTURE_PATCH_PREREVIEW_CHECKLIST.md  REVIEW_PATCH_PLAN_2026-03-03.md  build_android.sh  gradle.properties  settings.gradle.kts
essentia_android_app/android-install/arm64-v8a/lib/pkgconfig/: essentia.pc
essentia_android_app/app/: build.gradle.kts  proguard-rules.pro
essentia_android_app/app/src/androidTest/java/com/iriver/essentiaanalyzer/: MainActivitySmokeTest.kt
essentia_android_app/app/src/androidTest/java/com/iriver/essentiaanalyzer/ui/: AnalysisExplanationCardsTest.kt
essentia_android_app/app/src/debug/: AndroidManifest.xml
essentia_android_app/app/src/debug/java/com/iriver/essentiaanalyzer/ui/: AnalysisExplanationTestActivity.kt
essentia_android_app/app/src/main/: AndroidManifest.xml
essentia_android_app/app/src/main/cpp/: CMakeLists.txt  native_analyzer.cpp
essentia_android_app/app/src/main/java/com/iriver/essentiaanalyzer/: MainActivity.kt
essentia_android_app/app/src/main/java/com/iriver/essentiaanalyzer/data/: AnalyzerDataSource.kt  AnalyzerRepository.kt  AudioDecoder.kt  LinearResampler.kt
essentia_android_app/app/src/main/java/com/iriver/essentiaanalyzer/model/: AnalysisErrorClassifier.kt  AnalysisModels.kt  AnalysisWarningGrouper.kt
essentia_android_app/app/src/main/res/values/: strings.xml
essentia_android_app/scripts/: sync_essentia_artifacts.sh
(+8 files in other folders)
